Completed parallax and basic info

--- a/assets/style/app.styl
+++ b/assets/style/app.styl
@@ -1,5 +1,5 @@
 // Import Vuetify styling
-$body-font-family= Cabin, sans-serif
+$body-font-family= 'Work Sans', sans-serif
 
 @require '~vuetify/src/stylus/app.styl'
 
