fixed gallery and made footer sticky

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -58,9 +58,11 @@ h1 {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    min-height: 100vh;
 
     .page {
         width: $page-width-sm;
+        flex: 1;
 
         @media (min-width: $screen-sm) {
             width: $page-width-lg;
