--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -3,8 +3,8 @@ $grey-500: #9E9E9E;
 $grey-600: #757575;
 $grey-900: #212121;
 
+$purple-700: #7B1FA2;
 $purple-800: #6A1B9A;
-$purple-900: #4A148C;
 
 $background: #131313;
 $dark-background: #0e0e0e;
