--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 @import '~/scss/colors';
 @import '~/scss/sizes';
 
-$sans: 'Nunito', sans-serif;
+$sans: 'Raleway', sans-serif;
 
 * {
     -webkit-font-smoothing: antialiased;
@@ -32,12 +32,12 @@ body {
 
 a {
     text-decoration: none;
-    color: $purple-800;
+    color: $purple-700;
     outline: none;
     transition: color 150ms ease;
 
     &:hover {
-        color: $purple-900;
+        color: $purple-800;
     }
 }
 
@@ -47,6 +47,7 @@ em {
 
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
+    font-weight: 500;
 }
 
 h1 {
@@ -140,7 +141,7 @@ h1 {
         a {
             display: block;
             font-size: 2rem;
-            margin: 2rem 0;
+            margin: 2rem 0 1rem 0;
             color: $grey-500;
 
             &:hover {
@@ -155,7 +156,7 @@ h1 {
         em {
             display: block;
             color: $grey-600;
-            margin: 2rem 0;
+            margin: 1rem 0 2rem 0;
         }
     }
 }
