--- a/scss/main.scss
+++ b/scss/main.scss
@@ -108,11 +108,13 @@ h1 {
     width: 100%;
     background-size: cover;
     background-position: center center;
-    padding: 5rem;
     height: 60vh;
+    display: flex;
     
     h1 {
         font-size: 5rem;
+        margin: 2rem;
+        text-align: center;
     }
 }
 
