--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -1,10 +1,10 @@
-$grey-400: #BDBDBD;
-$grey-500: #9E9E9E;
+$grey-400: #bdbdbd;
+$grey-500: #9e9e9e;
 $grey-600: #757575;
 $grey-900: #212121;
 
-$purple-700: #7B1FA2;
-$purple-800: #6A1B9A;
+$purple-700: #814380;
+$purple-800: #5a1b59;
 
 $background: #131313;
 $dark-background: #0e0e0e;
