--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,8 +13,8 @@ Font
   box-sizing: border-box;
   color: $grey-400;
   font-family: $sans;
-  font-size: 16px;
-  letter-spacing: 0.01em;
+  font-size: $font-size;
+  letter-spacing: 0.03em;
 }
 
 /*
@@ -96,14 +96,10 @@ Page
   min-height: 100vh;
 
   .page {
-    width: $page-width-sm;
-    flex: 1;
-
-    @media (min-width: $screen-sm) {
-      width: $page-width-lg;
-    }
+    @include page-width();
 
     background-color: $background;
+    flex: 1;
   }
 }
 
@@ -115,7 +111,7 @@ section {
     padding: 2rem;
 
     &.narrow {
-      max-width: 960px;
+      max-width: $content-width;
       margin: 0 auto;
     }
 
@@ -160,7 +156,7 @@ section {
     display: flex;
 
     h1 {
-      font-size: 5rem;
+      font-size: 4rem;
       margin: 2rem;
       text-align: center;
     }
