--- a/scss/sizes.scss
+++ b/scss/sizes.scss
@@ -1,7 +1,19 @@
-$screen-sm: 768px;
+/*
+Font
+*/
+$font-size: 16px;
 
+/*
+Page
+*/
 $page-width-lg: 85%;
 $page-width-sm: 100%;
+$content-width: 960px;
+
+/*
+Responsive
+*/
+$screen-sm: 768px;
 
 @mixin page-width() {
     width: $page-width-sm;
